--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<p>Users in the database</p>
 
 <ul>
 	<% @users.each do |u| %>
