--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,3 +7,5 @@
 	Confirm Password: <%= f.password_field :password_confirmation, placeholder: "password" %><br />
 	<%= f.submit %>
 <% end %>
+
+<%= link_to "Log In", login_path %>
