--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
 	<div class="container">
-		<div class="pull-right">
-				<% if current_user %>
-					Welcome <%= current_user.name %>!
-					<%= link_to "Log out", session_path, method: :delete %>
-				<% else %>
-					<%= link_to "Sign up", new_user_path %>
-					<%= link_to "Log In", new_session_path %>
-				<% end %>
-		</div>
-		
+		<%= render 'layouts/header' %>
 		<%= yield %>
 	</div>
 
