--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="pull-right">
 		<% if current_user %>
-			Welcome <%= current_user.name %>!
+			Welcome <%= link_to current_user.name, user_path(current_user.id) %>!
 			<%= link_to "Log out", session_path, method: :delete %>
 		<% else %>
 			<%= link_to "Sign up", new_path %>
