login on homepage

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,6 @@
-<%= link_to "Back to Users", root_path %>
-
 <h1>Edit</h1>
 
-<%= form_for @user, { url: session_path } do |f| %>
+<%= form_for @user do |f| %>
 	Change Name: <%= f.text_field :name, placeholder: "change name" %><br />
 	Change Email: <%= f.text_field :email, placeholder: "@" %><br />
 	New Password: <%= f.password_field :password, placeholder: "password" %><br />
@@ -10,4 +8,4 @@
 	<%= f.submit %>
 <% end %>
 
-<%= link_to "Sign up", new_path %>
+<%= link_to "Back to Users", root_path %>
