--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<%# render 'loginmodal' %>
+
 <h1>Users#index</h1>
 <p>Users in the database</p>
 
@@ -8,3 +10,10 @@
 		</li>
 	<% end %>
 </ul>
+
+<%= form_for @user do |f| %>
+Email: <%= f.text_field :email, placeholder: "@" %><br />
+Password: <%= f.password_field :password, placeholder: "password" %><br />
+<%= f.submit %>
+<% end %>
+<%= link_to "Sign up", new_path %>
