--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,30 @@
  */
 
  @import 'bootstrap';
+
+ body {
+	background-color: #2c3e50;
+	color: white;
+	input { color: #333; }
+ }
+ .modal {
+ 	color: #333;
+ 	.form-group { margin-bottom: 0; }
+ 	.input-group { margin-bottom: 8px; }
+ 	.input-group .form-control:first-child,
+ 	.input-group .form-control:not(:first-child):not(:last-child) {
+ 		border-bottom-right-radius: 4px;
+ 		border-top-right-radius: 4px;
+ 	}
+ }
+.player {
+	width: 100%;
+	height: 700px;
+}
+.welcome {
+	margin-right: 30px;
+}
+
+.user-page {
+	button { clear: both; }
+}
