--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,24 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="http://connect.soundcloud.com/sdk.js"></script>
+	<script>
+		SC.initialize({
+		  client_id: 'f43e5fe0023f09c558e18747e7c4c708'
+		});
+
+		var track_url = 'http://soundcloud.com/forss/flickermood';
+		SC.oEmbed(track_url, { auto_play: true }, function(oEmbed) {
+		  console.log('oEmbed response: ' + oEmbed);
+		});
+	</script>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+	<%= render 'layouts/header' %>
+
 	<div class="container">
-		<%= render 'layouts/header' %>
 		<%= yield %>
 	</div>
 
