--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,13 @@
 <h1>Tell Us About Yourself</h1>
 
 <%= form_for @user do |f| %>
-	Name: <%= f.text_field :name, placeholder: "name" %><br />
-	Email: <%= f.text_field :email, placeholder: "@" %><br />
-	Password: <%= f.password_field :password, placeholder: "password" %><br />
-	Confirm Password: <%= f.password_field :password_confirmation, placeholder: "password" %><br />
-	<%= f.submit %>
+	<div class="form-group">
+		Name: <%= f.text_field :name, placeholder: "name", :class => "form-control" %><br />
+		Email: <%= f.text_field :email, placeholder: "@", :class => "form-control" %><br />
+		Password: <%= f.password_field :password, placeholder: "password", :class => "form-control" %><br />
+		Confirm Password: <%= f.password_field :password_confirmation, placeholder: "password", :class => "form-control" %><br />
+	</div>
+	<%= f.submit "Join!", {:class => 'btn btn-primary'} %>
 <% end %>
 
-<%= link_to "Log In", login_path %>
+<%= link_to "Log In", root_path %>
