fix security bugs and login/signup bugs

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,24 @@
-<h1 class="text-center">backstage</h1>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "backstage", root_path, :class => "navbar-brand" %>
 
-<div class="pull-right welcome">
-		<% if current_user %>
-			Welcome <%= link_to current_user.name, user_path(current_user.id) %>!
-			<%= link_to "Log out", session_path, method: :delete %>
-		<% end %>
-</div>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="nav navbar-nav navbar-right welcome">
+			<% if current_user %>
+				Welcome <%= link_to current_user.name, user_path(current_user.id) %>!
+					<%= link_to "Log out", session_path, method: :delete, :class => "btn" %>
+			<% end %>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
