--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,16 @@
 <h1>Tell Us About Yourself</h1>
 
+<% if @user.errors.any? %>
+	<div class="error_messages">
+		<h2>Form is invalid<h2>
+		<ul>
+			<% @user.errors.full_messages.each do |message| %>
+				<li><%= message %></li>
+			<% end %>
+		</ul>
+	</div>
+<% end %>
+
 <%= form_for @user do |f| %>
 	<div class="form-group">
 		Name: <%= f.text_field :name, placeholder: "name", :class => "form-control" %><br />
