--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Back to Users", root_path %>
+
 <h1>Edit</h1>
 
 <%= form_for @user do |f| %>
@@ -10,5 +12,4 @@
 	<%= f.submit "Update User", {:class => 'btn btn-default'} %>
 <% end %>
 
-<%= link_to "Back to Users", root_path %>
-
+<%= link_to "Delete this account", :user, method: :delete, data: { confirm: "Are you sure you want to delete your account?" } %>
