fix login/signup features, better styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
 <body>
 
 	<%= render 'layouts/header' %>
+	<%= render 'layouts/login' %>
 
 	<div class="content">
 		<% flash.each do |name, msg| %>
