--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,10 +15,33 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <div class="nav navbar-nav navbar-right welcome">
-			<% if current_user %>
-				Welcome <%= link_to current_user.name, user_path(current_user.id) %>!
-					<%= link_to "Log out", session_path, method: :delete, :class => "btn" %>
-			<% end %>
+        <% if current_user %>
+          
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+
+              Welcome <%= current_user.name %>!
+              <span class="caret"></span>
+
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li>
+                <%= link_to "Settings", user_path(current_user.id) %>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Logout", session_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+
+        <% else %>
+
+          <a href="#" data-toggle="modal" data-target="#myModal">Login</a>
+          <%= link_to "Signup", new_path %>
+
+        <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
