--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,12 @@
 		});
 
 		// initiate auth popup
-		SC.connect(function() {
-		  SC.get('/me', function(me) { 
-		    alert('Hello, ' + me.username); 
-		    console.log(me);
-		  });
-		});
+		// SC.connect(function() {
+		//   SC.get('/me', function(me) { 
+		//     alert('Hello, ' + me.username); 
+		//     console.log(me);
+		//   });
+		// });
 	</script>
   <%= csrf_meta_tags %>
 </head>
