move js from to asset pipeline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,10 @@
 		
 		<div class="container" ng-controller="appCtrl">
 			<%= yield %>
+
+			<!-- <input type="text" ng-model="testString" ng-change="sclogin()"> -->
+			<button ng-click="sclogin()">Click Me</button>
+			{{ data }}
 		</div>
 	</div>
 
