--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -7,6 +7,11 @@
         <h3 class="modal-title" id="myModalLabel">Login</h3>
       </div>
       <div class="modal-body">
+      	<div class="form-group">
+      		<button ng-click="sclogin()" class="btn btn-warning col-md-6 col-md-offset-3">Login through Soundcloud</button>
+      		<br />
+      		<br />
+      	</div>
 				<%= form_for @user_login, { url: session_path } do |f| %>
 					<div class="form-group">
 						Email:
@@ -16,7 +21,7 @@
 						</div>
 						Password: <%= f.password_field :password, placeholder: "Password", :class => "form-control" %><br />
 					</div>
-				<%= link_to "Sign up", new_path %>
+					<%= link_to "Sign up", new_path %>
       </div>
       <div class="modal-footer">
 					<%= f.submit "Login", {:class => 'btn btn-primary'} %>
