--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Backstage</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular-resource.js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<script src="http://connect.soundcloud.com/sdk.js"></script>
 	<script>
@@ -23,7 +24,7 @@
 	</script>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body ng-controller="appCtrl">
 
 	<%= render 'layouts/header' %>
 	<%= render 'layouts/login' %>
@@ -33,12 +34,9 @@
 			<%= content_tag :div, msg, id: "flash_#{name}" %>
 		<% end %>
 		
-		<div class="container" ng-controller="appCtrl">
+		<div class="container">
 			<%= yield %>
-
-			<!-- <input type="text" ng-model="testString" ng-change="sclogin()"> -->
-			<button ng-click="sclogin()">Click Me</button>
-			{{ data }}
+			<!-- <button ng-click="sclogin()" class="btn btn-primary">Login</button> -->
 		</div>
 	</div>
 
