--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,9 +37,11 @@
 }
 .welcome {
 	color: #2c3e50;
-	margin-top: 11px;
-	margin-right: 30px;
 }
+.signin-links {
+	a { margin-top: 13px; display: inline-block; margin-right: 30px; }
+}
+
 
 .user-page {
 	button { clear: both; }
