--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,14 +14,29 @@
  *= require_self
  */
 
- @import 'bootstrap';
+@import 'bootstrap';
+@import 'http://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css';
 
- body {
+/* Global Styles
+=============================== */
+body {
 	background-color: #2c3e50;
 	color: white;
+	font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
 	input { color: #333; }
+	.content { padding-top: 50px; }
  }
- .modal {
+
+/* Nav Styles
+================================= */
+.modal-dialog {
+		width: 350px;
+		margin: 30px auto;
+		.modal-content {
+			border-radius: 2px;
+		}
+	}
+.modal {
  	color: #333;
  	.form-group { margin-bottom: 0; }
  	.input-group { margin-bottom: 8px; }
@@ -30,21 +45,20 @@
  		border-bottom-right-radius: 4px;
  		border-top-right-radius: 4px;
  	}
- }
-.player {
-	width: 100%;
-	height: 700px;
-}
-.welcome {
-	color: #2c3e50;
-}
-.signin-links {
-	a { margin-top: 13px; display: inline-block; margin-right: 30px; }
+ 	.glyphicon-lock { 
+		font-size: 11.5px;
+ 	}
 }
 
-
-.user-page {
-	button { clear: both; }
+@media(max-width:767px) {
+	.nav li { display: inline-block; }
+	.navbar-header:before, .navbar-header:after {
+		content: none;
+	}
 }
 
-.content { margin-top: 60px; }
+// .player {
+// 	width: 100%;
+// 	height: 700px;
+// }
+
