--- a/app/views/welcome/new.html.erb
+++ b/app/views/welcome/new.html.erb
@@ -8,7 +8,7 @@
                     <h1>backstage</h1>
                     <h3>An Immersive Listening Experience</h3>
                     <hr class="intro-divider">
-                    <button class="btn btn-default">How It Works</button>
+                    <!-- <button class="btn btn-default">How It Works</button> -->
                 </div>
             </div>
         </div>
@@ -16,4 +16,3 @@
     </div>
     <!-- /.container -->
 </div>
-
