--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,23 +2,32 @@
 ============================== */
 
 .intro-header {
-  padding-bottom: 50px;
+  min-height: 610px;
   text-align: center;
   color: #f8f8f8;
-  background: url(../img/intro-bg.jpg) no-repeat center center;
+  background: 
+    -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+     url('EDMcrowd.jpg') no-repeat center center;
+  background: 
+    -moz-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('EDMcrowd.jpg') no-repeat center center;
+  background: 
+    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+    url('EDMcrowd.jpg') no-repeat center center;
   background-size: cover;
 }
+
 
 .intro-message {
     position: relative;
     padding-top: 20%;
     padding-bottom: 15%;
-}
-
-.intro-message > h1 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 5em;
+    h1 {
+      margin: 0;
+      text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+      font-size: 8em;
+    }
+    h3 { text-shadow: 2px 2px 3px rgba(0,0,0,0.6); }
 }
 
 .intro-divider {
@@ -27,30 +36,17 @@
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
-.intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-}
-
 @media(max-width:767px) {
-    .intro-message {
-        padding-bottom: 15%;
-    }
-
-    .intro-message > h1 {
-        font-size: 3em;
-    }
+    .intro-message { padding-bottom: 15%; }
+    .intro-message > h1 { font-size: 3em; }
 
     ul.intro-social-buttons > li {
-        display: block;
-        margin-bottom: 20px;
-        padding: 0;
+        li {
+            display: block;
+            margin-bottom: 20px;
+            padding: 0;
+        }
+        li:last-child { margin-bottom: 0; }
     }
-
-    ul.intro-social-buttons > li:last-child {
-        margin-bottom: 0;
-    }
-
-    .intro-divider {
-        width: 100%;
-    }
+    .intro-divider { width: 100%; }
 }
