--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,7 +43,8 @@ body {
  		border-bottom-right-radius: 4px;
  		border-top-right-radius: 4px;
  	}
- 	.glyphicon-lock { 
+ 	.glyphicon-lock, 
+ 	.glyphicon-user { 
 		font-size: 11.5px;
  	}
 }
