--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,6 @@
  */
 
 @import 'bootstrap';
-@import 'http://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css';
 
 /* Global Styles
 =============================== */
@@ -47,6 +46,7 @@ body {
  	.glyphicon-user { 
 		font-size: 11.5px;
  	}
+ 	.btn-warning { width: 100%; }
 }
 .navbar {
 	@media(max-width:767px) {
@@ -56,6 +56,7 @@ body {
 		}
 	}
 }
+
 
 // .player {
 // 	width: 100%;
