--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,18 @@
 <head>
   <title>Backstage</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js"></script>
+  	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular-resource.js"></script>
+    <script src="http://connect.soundcloud.com/sdk.js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-	<script src="http://connect.soundcloud.com/sdk.js"></script>
 	<script>
-	// initialize client with app credentials
-	SC.initialize({
-	  client_id: 'f43e5fe0023f09c558e18747e7c4c708',
-	  redirect_uri: 'https://soundcloud.com/connect'
-	});
+
+    // initialize client with app credentials
+    SC.initialize({
+      client_id: 'f43e5fe0023f09c558e18747e7c4c708',
+      redirect_uri: 'http://localhost:3000'
+    });
 
 	// initiate auth popup
 	// SC.connect(function() {
@@ -20,22 +23,16 @@
 	//   });
 	// });
 
-	var track_url = 'http://soundcloud.com/forss/flickermood';
-	SC.oEmbed(track_url, { auto_play: true }, function(oEmbed) {
-		  console.log('oEmbed response: ' + oEmbed);
-	});
 	</script>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body ng-controller="appCtrl">
 
 	<%= render 'partials/nav' %>
 	<%= render 'partials/modals' %>
 
 	<div class="content">
-		<div ng-controller="appCtrl">
-			<%= yield %>
-		</div>
+		<%= yield %>
 	</div>
 
 </body>
