--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,6 +5,8 @@
 	
 	<h1>Tell Us About Yourself</h1>
 	
+<% 
+=begin%>
 	<% if @user.errors.any? %>
 		<div class="error_messages">
 			<h2>Form is invalid<h2>
@@ -15,6 +17,8 @@
 			</ul>
 		</div>
 	<% end %>
+<%
+=end%>
 	
 	<%= form_for @user do |f| %>
 		<div class="form-group">
