--- a/app/views/welcome/new.html.erb
+++ b/app/views/welcome/new.html.erb
@@ -1,5 +1,5 @@
 <!-- Landing Page -->
-<div class="intro-header">
+<div class="intro-header" id="intro-header">
     <div class="container">
 
         <div class="row">
