upgrade styles, add music player, implement certain soundcloud user features

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -5,6 +5,7 @@
   min-height: 610px;
   text-align: center;
   color: #f8f8f8;
+  height: 100%;
   background: 
     -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
      url('EDMcrowd.jpg') no-repeat center center;
@@ -36,6 +37,7 @@
 }
 
 @media(max-width:767px) {
+    .intro-header { background-position: cover cover; }
     .intro-message { 
       padding-bottom: 15%; 
       h1 {font-size: 5em; }
