--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular-resource.js"></script>
+    <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
     <script src="http://connect.soundcloud.com/sdk.js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<script>
