--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,14 @@
 
 /* Global Styles
 =============================== */
+html,
+body,
+.content { 
+	height: 100%;
+	background-color: #222222;
+}
+.navbar-nav > li > a:focus,
+.btn-warning:focus { outline: none; }
 body {
 	background-color: #2c3e50;
 	color: white;
@@ -59,6 +67,7 @@ body {
 	#soundcloud-login { right: 279px; top: 22px; }	
 	#soundcloud-signup { left: 26px; top: 86px; }
  	.btn-warning { 
+ 		background-color: #FF5500;
  		position: relative;
  		width: 100%; 
  		border-radius: 2px; 
@@ -68,6 +77,12 @@ body {
  	}
 }
 .navbar {
+	.navbar-brand, 
+	.navbar-nav > li > a { 
+		-webkit-transition: color 1s ease;
+		-o-transition: color 1s ease;
+		transition: color 1s ease;
+	}
 	@media(max-width:767px) {
 		.nav li { display: inline-block; }
 		.navbar-header:before, .navbar-header:after {
@@ -77,8 +92,7 @@ body {
 }
 
 
-// .player {
-// 	width: 100%;
-// 	height: 700px;
-// }
-
+#sc-widget {
+	width: 100%;
+	height: 100%;
+}
