--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
 <!-- User Index Page -->
+<%
+=begin
 <div class="user-page">
 
 	<div class="container">
@@ -17,3 +19,25 @@
 		
 
 </div>
+<%
+=end%>
+
+<iframe id="sc-widget" width="100%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F155053241&show_artwork=true&visual=true"></iframe>
+<script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
+<!-- <script type="text/javascript">
+  (function(){
+    var widgetIframe = document.getElementById('sc-widget'),
+        widget       = SC.Widget(widgetIframe),
+        newSoundUrl = 'http://api.soundcloud.com/tracks/155053241';
+
+    widget.bind(SC.Widget.Events.READY, function() {
+      // load new widget
+      widget.bind(SC.Widget.Events.FINISH, function() {
+        widget.load(newSoundUrl, {
+          show_artwork: true
+        });
+      });
+    });
+
+  }());
+</script> -->
