create README, better comments, weed out unnecessary code

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
 </head>
 <body ng-controller="appCtrl">
 
+  <!-- Pull in Navbar -->
 	<%= render 'partials/nav' %>
+  <!-- Pull in Modal Content -->
 	<%= render 'partials/modals' %>
 
 	<div class="content">
