--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,28 +1,5 @@
-<!-- User Index Page -->
-<%
-=begin
-<div class="user-page">
-
-	<div class="container">
-		
-		<h1>Users#index</h1>
-		<p>Users in the database</p>
-		
-		<ul>
-			<% @users.each do |u| %>
-				<li>
-					<strong> <%= link_to "#{u.name}", user_path(u) %></strong>
-				</li>
-			<% end %>
-		</ul>
-	</div>
-		
-
-</div>
-<%
-=end%>
-
-<iframe id="sc-widget" width="100%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F155053241&show_artwork=true&visual=true"></iframe>
+<!-- Music Player Page -->
+<iframe id="sc-widget" width="100%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F155053241&amp;show_artwork=true&amp;visual=true&amp;sharing=false"></iframe>
 <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
 <!-- <script type="text/javascript">
   (function(){
