--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <!-- User Settings Page -->
-<div class="edit-container user-edit">
+<div class="center-block" id="edit-container">
 	<%= link_to "Back to the Music", users_path %>
 	
-	<h1>Edit</h1>
+	<h1>Settings</h1>
 	
 	<%= form_for @user do |f| %>
 		<div class="form-group">
