--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,39 +10,33 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require 'bootstrap'
  *= require_tree 
  *= require_self
  */
-
-@import 'bootstrap';
 
 /* Global Styles
 =============================== */
 html,
 body,
 .content { 
-	height: 100%;
-	background-color: #222222;
+		font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+		height: 100%;
+		background-color: #222222;
+		color: white;
+		input { color: #333; }
 }
-.navbar-nav > li > a:focus,
-.btn-warning:focus { outline: none; }
-body {
-	background-color: #2c3e50;
-	color: white;
-	font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
-	input { color: #333; }
-	.content { padding-top: 50px; }
- }
+.content { padding-top: 50px; }
 
 /* Nav Styles
 ================================= */
-.modal-dialog {
+.modals {
+	color: #333;
+	.modal-dialog {
 		width: 350px;
 		margin: 30px auto;
-		.modal-content { border-radius: 2px; }
-}
-.modals {
- 	color: #333;
+	}
+	.modal-content { border-radius: 2px; }
  	.form-group { margin-bottom: 0; }
  	.input-group { margin-bottom: 8px; }
  	.input-group .form-control:first-child,
@@ -58,22 +52,23 @@ body {
 		width: 40px; 
 		position: absolute;  
 		z-index: 100; 
+		right: 275px; 
+		top: 22.5px;
  	}
- 	.soundcloud-span { 
- 		font-weight: 700; 
- 		padding-left: 20px; 
- 		display: inline-block; 
- 	}
-	#soundcloud-login { right: 279px; top: 22px; }	
-	#soundcloud-signup { left: 26px; top: 86px; }
- 	.btn-warning { 
+ 	.btn-soundcloud { 
+ 		#soundcloud-span { 
+ 			padding-left: 30px; 
+	 		font-size: 15px;
+ 			letter-spacing: .5px;
+ 			display: inline-block; 
+			font-weight: 700; 
+ 			color: white;
+ 		}
  		background-color: #FF5500;
  		position: relative;
  		width: 100%; 
  		border-radius: 2px; 
  		height: 51px;
- 		font-size: 15px;
- 		letter-spacing: .5px;
  	}
 }
 .navbar {
@@ -83,16 +78,13 @@ body {
 		-o-transition: color 1s ease;
 		transition: color 1s ease;
 	}
+	.navbar-nav > li > a:focus,
+	.btn-warning:focus { outline: none; }
 	@media(max-width:767px) {
 		.nav li { display: inline-block; }
-		.navbar-header:before, .navbar-header:after {
+		.navbar-header:before, 
+		.navbar-header:after {
 			content: none;
 		}
 	}
-}
-
-
-#sc-widget {
-	width: 100%;
-	height: 100%;
 }
