--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,5 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.user-edit { padding-top: 50px; }
-.edit-container { max-width: 300px; margin: 0 auto;}
+#edit-container { 
+	padding-top: 50px;
+	max-width: 300px; 
+}
+
+#sc-widget {
+	width: 100%;
+	height: 100%;
+}
