--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,33 +1,34 @@
 /* Landing Page
 ============================== */
 
+// Variables
+$text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+$linear-gradient: rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5);
+
 .intro-header {
-  min-height: 610px;
-  text-align: center;
-  color: #f8f8f8;
-  height: 100%;
-  background: 
-    -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-     url('EDMcrowd.jpg') no-repeat center center;
-  background: 
-    -moz-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('EDMcrowd.jpg') no-repeat center center;
-  background: 
-    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-    url('EDMcrowd.jpg') no-repeat center center;
-  background-size: cover;
+    min-height: 610px;
+    height: 100%;
+    background: 
+      -webkit-linear-gradient($linear-gradient),
+       url('EDMcrowd.jpg') no-repeat center center;
+    background: 
+      -moz-linear-gradient($linear-gradient),
+      url('EDMcrowd.jpg') no-repeat center center;
+    background: 
+      linear-gradient($linear-gradient), 
+      url('EDMcrowd.jpg') no-repeat center center;
+    background-size: cover;
 }
 
 .intro-message {
     position: relative;
     padding-top: 20%;
-    padding-bottom: 15%;
     h1 {
       margin: 0;
-      text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+      text-shadow: $text-shadow;
       font-size: 8em;
     }
-    h3 { text-shadow: 2px 2px 3px rgba(0,0,0,0.6); }
+    h3 { text-shadow: $text-shadow; }
 }
 
 .intro-divider {
@@ -40,15 +41,7 @@
     .intro-header { background-position: cover cover; }
     .intro-message { 
       padding-bottom: 15%; 
-      h1 {font-size: 5em; }
-    }
-    ul.intro-social-buttons > li {
-        li {
-            display: block;
-            margin-bottom: 20px;
-            padding: 0;
-        }
-        li:last-child { margin-bottom: 0; }
+      h1 { font-size: 5em; }
     }
     .intro-divider { width: 100%; }
 }
