--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,5 @@
 <!-- Music Player Page -->
-<iframe id="sc-widget" width="100%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F155053241&amp;show_artwork=true&amp;visual=true&amp;sharing=false"></iframe>
-<script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
+<iframe id="sc-widget" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F155053241&amp;show_artwork=true&amp;visual=true&amp;sharing=false&amp;buying=false&amp;show_comments=false"></iframe>
 <!-- <script type="text/javascript">
   (function(){
     var widgetIframe = document.getElementById('sc-widget'),
