--- a/app/views/welcome/new.html.erb
+++ b/app/views/welcome/new.html.erb
@@ -1,5 +1,5 @@
 <!-- Landing Page -->
-<div class="intro-header" id="intro-header">
+<div class="intro-header text-center" id="intro-header">
     <div class="container">
 
         <div class="row">
@@ -11,8 +11,6 @@
                     <!-- <button class="btn btn-default">How It Works</button> -->
                 </div>
             </div>
-        </div>
-
-    </div>
-    <!-- /.container -->
+        </div> <!-- /.row -->
+    </div> <!-- /.container -->
 </div>
