--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     // initialize client with app credentials
     SC.initialize({
       client_id: 'f43e5fe0023f09c558e18747e7c4c708',
-      redirect_uri: 'http://localhost:3000'
+      redirect_uri: 'http://backstage-app.herokuapp.com'
     });
 
 	</script>
